--- a/EtiquetaBLL/EtiquetaBLL.csproj
+++ b/EtiquetaBLL/EtiquetaBLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="InformacaoNutricionalController.cs" />
     <Compile Include="ProdutoController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EtiquetaDAL\EtiquetaDAL.csproj">
