--- a/EtiquetaBioMundo/packages.config
+++ b/EtiquetaBioMundo/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net461" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="140.340.80" targetFramework="net461" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net461" />
 </packages>
