--- a/EtiquetaBioMundo/App.config
+++ b/EtiquetaBioMundo/App.config
@@ -6,7 +6,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="EtiquetaDB" connectionString="Data Source=C:\EtiquetaBioMundo\Dados\BancoDadosEtiqueta.sdf" providerName="System.Data.SqlServerCe.4.0" />
+    <add name="EtiquetaDB" connectionString="Data Source=C:\EtiquetaBioMundo\Dados\BancoDadosEtiqueta.sdf"
+      providerName="System.Data.SqlServerCe.4.0" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
