--- a/EtiquetaBioMundo/EtiquetaBioMundo.csproj
+++ b/EtiquetaBioMundo/EtiquetaBioMundo.csproj
@@ -60,6 +60,7 @@
       <HintPath>..\packages\Microsoft.SqlServer.Types.14.0.314.76\lib\net40\Microsoft.SqlServer.Types.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -98,16 +99,16 @@
     <Compile Include="formManutencaoProdutos.Designer.cs">
       <DependentUpon>formManutencaoProdutos.cs</DependentUpon>
     </Compile>
-    <Compile Include="formRelatorioEtiqueta.cs">
+    <Compile Include="RelatorioEtiqueta\formRelatorioEtiqueta.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="formRelatorioEtiqueta.Designer.cs">
+    <Compile Include="RelatorioEtiqueta\formRelatorioEtiqueta.Designer.cs">
       <DependentUpon>formRelatorioEtiqueta.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RelatorioEtiqueta\DadosEtiqueta.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
-    <EmbeddedResource Include="Etiqueta1.rdlc" />
     <EmbeddedResource Include="formFundoPrincipal.resx">
       <DependentUpon>formFundoPrincipal.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,7 +118,7 @@
     <EmbeddedResource Include="formManutencaoProdutos.resx">
       <DependentUpon>formManutencaoProdutos.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="formRelatorioEtiqueta.resx">
+    <EmbeddedResource Include="RelatorioEtiqueta\formRelatorioEtiqueta.resx">
       <DependentUpon>formRelatorioEtiqueta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -129,7 +130,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="packages.config" />
+    <EmbeddedResource Include="RelatorioEtiqueta\RelatorioEtiqueta.rdlc" />
+    <None Include="RelatorioEtiqueta\EtiquetaBioMundo.RelatorioEtiqueta.DadosEtiqueta.datasource" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -167,6 +172,17 @@
     <Content Include="SqlServerTypes\x86\SqlServerSpatial140.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <COMReference Include="Microsoft.Office.Core">
+      <Guid>{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}</Guid>
+      <VersionMajor>2</VersionMajor>
+      <VersionMinor>7</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>primary</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
